<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/panel_padding">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:singleLine="true" />

    <EditText
        android:id="@+id/host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remote_host_hint"
        android:inputType="textUri"
        android:singleLine="true" />

    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remote_port_hint"
        android:inputType="number"
        android:singleLine="true" />

    <EditText
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remote_share_hint"
        android:singleLine="true" />

    <EditText
        android:id="@+id/domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remote_domain_hint"
        android:singleLine="true" />

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webdav_login"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/keyPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remote_keypath_hint"
        android:singleLine="true" />

    <EditText
        android:id="@+id/keyPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remote_keypass_hint"
        android:inputType="textPassword"
        android:singleLine="true" />

    <com.foobnix.pdf.info.view.MyProgressBar
        android:id="@+id/MyProgressBarAddRemote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

</LinearLayout>
