<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/panel_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="60dip"
            android:text="@string/ai_config_protocol"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aiProtocolValue"
            style="@style/textLink"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ai_protocol_openai" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:minWidth="60dip"
            android:text="@string/ai_profile_config"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aiProfileValue"
            style="@style/textLink"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ai_profile_none" />
    </LinearLayout>

    <EditText
        android:id="@+id/aiBaseUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ai_config_url"
        android:inputType="textUri"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/aiApiKey"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/ai_config_key"
        android:inputType="text"
        android:singleLine="true" />

        <TextView
            android:id="@+id/aiKeyToggle"
            style="@style/textLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dip"
            android:text="@string/ai_key_show" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/aiModel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ai_config_model"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/aiModelList"
            style="@style/textLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dip"
            android:padding="6dip"
            android:text="@string/ai_model_pick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="110dip"
            android:text="@string/ai_config_max_tokens"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/aiMaxTokens"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="4096"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/aiThinking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ai_config_thinking" />

    <TextView
        android:id="@+id/aiTestConnection"
        style="@style/textLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:minWidth="110dip"
        android:text="@string/webdav_sync_test_connection" />

    <TextView
        android:id="@+id/aiTestStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dip"
        android:padding="2dip"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dip"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/aiChatInput"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ai_chat_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/aiChatSend"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_marginLeft="8dip"
            android:background="@drawable/bg_border_ltgray"
            android:gravity="center"
            android:minWidth="96dip"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:text="@string/ai_ask_send"
            android:textColor="@color/tint_gray"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/aiChatResultScroll"
        android:layout_width="match_parent"
        android:layout_height="180dip"
        android:layout_marginTop="8dip"
        android:visibility="gone">

        <TextView
            android:id="@+id/aiChatResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:padding="4dip"
            android:textIsSelectable="true"
            android:textSize="14sp" />
    </ScrollView>

    <com.foobnix.pdf.info.view.MyProgressBar
        android:id="@+id/aiProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

</LinearLayout>
</ScrollView>
