<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pathContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/panel_padding"
        android:background="@drawable/bg_search_second"
        android:gravity="center_vertical"
        android:minHeight="@dimen/wh_button"
        android:orientation="horizontal"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/onBack"
            style="@style/buttonWhite"
            android:layout_width="@dimen/wh_button"
            android:layout_height="@dimen/wh_button"
            android:layout_weight="0"
            android:contentDescription="@string/cd_back_to_parent"
            android:src="@drawable/glyphicons_223_chevron_left" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/tint_divider" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/panel_title_padding"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="left"
            android:maxLines="1"
            android:text="@string/catalogs"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/starIcon"
            android:layout_width="@dimen/wh_button"
            android:layout_height="@dimen/wh_button"
            android:layout_weight="0"
            android:background="?android:attr/selectableItemBackground"
            android:padding="7dip"
            android:src="@drawable/glyphicons_50_star_empty"
            android:tint="@color/tint_gray" />

        <com.foobnix.pdf.info.view.MyProgressBar
                    android:saveEnabled="false"
            
            android:id="@+id/MyProgressBarOPDS"
            android:layout_width="@dimen/wh_button"
            android:layout_height="@dimen/wh_button"
            android:layout_weight="0" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/tint_divider" />

        <ImageView
            android:id="@+id/onHome"
            style="@style/buttonWhite"
            android:layout_width="@dimen/wh_button"
            android:layout_height="@dimen/wh_button"
            android:layout_weight="0"
            android:contentDescription="@string/cd_back_to_all_catalogs"
            android:src="@drawable/glyphicons_21_home" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <com.foobnix.ui2.fast.FastScrollRecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dip" >
        </com.foobnix.ui2.fast.FastScrollRecyclerView>

        <TextView
            android:id="@+id/webdavEmptyHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/webdav_empty_hint"
            android:textColor="@color/tint_gray"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>